Ensure tab-row components can scroll on overflow

--- a/resources/assets/css/components/pieces/tabs.less
+++ b/resources/assets/css/components/pieces/tabs.less
@@ -4,6 +4,7 @@
 
     margin-bottom: 0;
     padding-left: 0; // Override default ul/ol
+    overflow-x: scroll;
 
     > li {
       display: block;
